alterei a aparencia da pagina inicial com adições ao HTML que foram estilizadas no CSS

--- a/index.html
+++ b/index.html
@@ -43,8 +43,20 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-
-                    </div><!---->
+                    <h1>TRANSFORMANDO IDEIAS EM REALIDADE VIRTUAL.</h1>
+                    <p>Seja muito bem-vindo(a) ao Portfólio de João Pedro. Aqui pode-se coletar informações sobre as
+            especialidades do mesmo.<br>Como desenvolvedor júnior, eu já criei 3 jogos em uma engine low-code chamada <span> Gdevelop.</span><br><br>
+            Além disso, já criei um clone de flappy bird com algumas alterações usando <span class="js">Javascript.</span><br>Além disso, tenho muitas animações de qualidade para compartilhar.<br> Nesse
+            Portfólio, irei te acompanhar enquanto mostro todas essas conquistas.</p>
+                    <div class="botao-contato2">
+                        <a href="#">
+                            <button>Entre em contato</button>
+                        </a>
+                    </div>
+                    </div><!--txt-topo-site-->
+                    <div class="img-topo-site">
+                        <img src="WhatsApp Image 2025-09-09 at 10.18.32.jpeg" alt="Imagem de João Pedro">
+                    </div>
                 </div><!--flex-->
             </div> <!--interface-->
         </section><!--topo-do-site-->
@@ -135,4 +147,4 @@
 </body>
 
 </html>
-<ul> Nós caímos para aprender a nos levantarmos</ul><br><br><br><br>
+<ul> </ul><br><br><br><br>
