começo da nova pagina de projetos

--- a/paginaprojetos.html
+++ b/paginaprojetos.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styleprojetos.css">
 </head>
 <body>
-    
+    <div class="txt-topo-tela">
+    <h1>ALGUNS DOS MEUS PROJETOS</h1>
+    </div>
+    <div class="interface-dos-projetos">
+<div class="top-weapon">
+     <p>Jato VS Alien</p> <img src="navezinha.gif" alt=""><p>Uma simples animação que demonstra minha habilidade<br> com objetos simples</p>
+</div>
+<div class="geometric-danger">s</div>
+<div class="shiver-me-timbers">s</div>
+<div class="barbaro">s</div>
+<div class="nave-vs-alien">s</div>
+</div>
 </body>
 </html>
